fix: dark hight contrast theme background color [YTFRONT-4818]

--- a/packages/ui/src/ui/styles/themes/dark-theme.scss
+++ b/packages/ui/src/ui/styles/themes/dark-theme.scss
@@ -23,7 +23,7 @@
     --dark-background: #37363f;
     --light-background: #312f36;
     --hover-background: #34333c;
-    --main-background: #2d2c33;
+    --main-background: var(--g-color-base-background);
     --opacity-background: rgba(0, 0, 0, 0.4);
 
     // System
@@ -105,8 +105,8 @@
     --pinkrose-color: #d770ad;
     --mediumgray-color: #7f8285;
     --darkgray-color: #434445;
-    --rubber-color: #855D39;
-    --dornyellow-color: #FFF201;
+    --rubber-color: #855d39;
+    --dornyellow-color: #fff201;
 
     --checkbox-icon: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxNiIgaGVpZ2h0PSIxNiIgZmlsbD0iI0MwQzBDMiI+PHBhdGggZD0iTTEzLjc5NSAxTDUuNzkgMTIuNTI3IDIuMDM2IDguNTAzIDEgOS43NzMgNS45MTcgMTUgMTUgMi4xMTIgMTMuNzk1IDF6Ii8+PC9zdmc+');
 }
